[gd_scene load_steps=2 format=3 uid="uid://dxwj6lw6a0xb6"]

[ext_resource type="Script" path="res://src/ui_components/player_list/player_list_header/player_list_header.gd" id="1_cxije"]

[node name="PlayerListHeader" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.5
offset_top = -16.0
offset_right = 244.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cxije")

[node name="PositionButton" type="Button" parent="."]
layout_mode = 2
text = "P"

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2

[node name="NameButton" type="Button" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "NAME"
alignment = 0
text_overrun_behavior = 3

[node name="VSeparator2" type="VSeparator" parent="."]
layout_mode = 2

[node name="OverallButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "OVERALL"
text = "OV"

[node name="VSeparator4" type="VSeparator" parent="."]
layout_mode = 2

[node name="Mental" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VSeparator5" type="VSeparator" parent="."]
layout_mode = 2

[node name="Technical" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VSeparator6" type="VSeparator" parent="."]
layout_mode = 2

[node name="Physical" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VSeparator7" type="VSeparator" parent="."]
layout_mode = 2

[node name="Goalkeeper" type="HBoxContainer" parent="."]
layout_mode = 2

[connection signal="mouse_entered" from="NameButton" to="." method="_on_name_button_mouse_entered"]
[connection signal="mouse_exited" from="NameButton" to="." method="_on_name_button_mouse_exited"]
[connection signal="pressed" from="NameButton" to="." method="_on_name_button_pressed"]
